# opencode-agent

./: .gitignore
docs/: known-issues.md
frontend/: .env.development  .env.production  README.md  index.html  package-lock.json  package.json  vite.config.ts
services/orchestrator/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
services/orchestrator/app/: __init__.py  config.py  main.py
services/orchestrator/app/api/: __init__.py  router.py
services/orchestrator/app/api/v1/: __init__.py  jobs.py  schemas.py  skills.py
services/orchestrator/app/application/: __init__.py  container.py  executor.py  orchestrator.py
services/orchestrator/app/domain/: __init__.py  enums.py  models.py
services/orchestrator/app/domain/skills/: __init__.py  base.py  data_analysis.py  general_default.py  ppt.py  registry.py  router.py
services/orchestrator/app/infra/: __init__.py
services/orchestrator/app/infra/db/: __init__.py  models.py  repository.py  session.py
services/orchestrator/app/infra/logging/: __init__.py  context.py  setup.py
services/orchestrator/app/infra/opencode/: __init__.py  client.py  event_bridge.py
services/orchestrator/app/infra/security/: __init__.py  permission_policy.py
services/orchestrator/app/infra/storage/: __init__.py  artifact.py  workspace.py
services/orchestrator/app/worker/: __init__.py  celery_app.py  log_archive.py  tasks.py
services/orchestrator/migrations/: 001_init.sql
services/orchestrator/tests/: test_data_analysis_skill.py  test_p1_regressions.py  test_permission_policy.py  test_skill_router.py
(+84 files in other folders)
